# monetdb_fpga

./: CMakeLists.txt
sql/backends/monet5/UDF/udf/: 80_udf.sql  CMakeLists.txt  udf.c  udf.h  udf.mal
sql/backends/monet5/UDF/udf/fpga_op/: CMakeLists.txt  fpga_op.c  fpga_op.h  krnl_fpga_op.cfg
sql/backends/monet5/UDF/udf/fpga_op/common/includes/xcl2/: xcl2.hpp
sql/backends/monet5/UDF/udf/fpga_op/src/: fpga_op.cpp  fpga_op.h  krnl_fpga_op.cpp  krnl_fpga_op.h
